--- a/index.html
+++ b/index.html
@@ -11,7 +11,47 @@
 </head>
 
 <body class="not-loaded">
-  <div class="night"></div>
+  <div class="theSun">
+    <div class="ray_box">
+      <div class="ray ray1"></div>
+      <div class="ray ray2"></div>
+      <div class="ray ray3"></div>
+      <div class="ray ray4"></div>
+      <div class="ray ray5"></div>
+      <div class="ray ray6"></div>
+      <div class="ray ray7"></div>
+      <div class="ray ray8"></div>
+      <div class="ray ray9"></div>
+      <div class="ray ray10"></div>
+    </div>
+  </div>
+  <!-- <div id="sky">
+    <div class="theSun">
+      <div class="ray_box">
+        <div class="ray ray1"></div>
+        <div class="ray ray2"></div>
+        <div class="ray ray3"></div>
+        <div class="ray ray4"></div>
+        <div class="ray ray5"></div>
+        <div class="ray ray6"></div>
+        <div class="ray ray7"></div>
+        <div class="ray ray8"></div>
+        <div class="ray ray9"></div>
+        <div class="ray ray10"></div>
+      </div>
+    </div>
+    <div class="cloudwrapperOne">
+      <div class="cloud c1"></div>
+    </div>
+    <div class="cloudwrapperTwo">
+      <div class="cloud c2"></div>
+    </div>
+    <div class="cloudwrapperThree">
+      <div class="cloud c3"></div>
+    </div> -->
+
+  </div>
+  </div>
   <div class="flowers">
     <div class="flower flower--1">
       <div class="flower__leafs flower__leafs--1">
