Improve flowers and tone

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <body class="not-loaded">
   <div class="theSun">
+    <div class="cloudwrapperOne">
+      <div class="cloud c1"></div>
+    </div>
+    <div class="cloudwrapperTwo">
+      <div class="cloud c1"></div>
+    </div>
     <div class="ray_box">
       <div class="ray ray1"></div>
       <div class="ray ray2"></div>
@@ -25,32 +31,9 @@
       <div class="ray ray10"></div>
     </div>
   </div>
-  <!-- <div id="sky">
-    <div class="theSun">
-      <div class="ray_box">
-        <div class="ray ray1"></div>
-        <div class="ray ray2"></div>
-        <div class="ray ray3"></div>
-        <div class="ray ray4"></div>
-        <div class="ray ray5"></div>
-        <div class="ray ray6"></div>
-        <div class="ray ray7"></div>
-        <div class="ray ray8"></div>
-        <div class="ray ray9"></div>
-        <div class="ray ray10"></div>
-      </div>
-    </div>
-    <div class="cloudwrapperOne">
-      <div class="cloud c1"></div>
-    </div>
-    <div class="cloudwrapperTwo">
-      <div class="cloud c2"></div>
-    </div>
-    <div class="cloudwrapperThree">
-      <div class="cloud c3"></div>
-    </div> -->
-
-  </div>
+  <div class="poetry">
+    <p>Mong Dung mỗi ngày đều là đơn giản</p>
+    <p>Ngẩng đầu lên đều là ấm áp, dịu dàng</p>
   </div>
   <div class="flowers">
     <div class="flower flower--1">
